--- a/admin/client/src/styles/legacy/_SecurityAdmin.scss
+++ b/admin/client/src/styles/legacy/_SecurityAdmin.scss
@@ -30,22 +30,20 @@
 /* For user permissions the readonly checkboxes are set as display none and are replaced with a <span> that has a
 green tick icon as a background this is created using gulp-sprity generated classes and hardcoded in the php */
 
-.permissioncheckboxsetfield_readonly {
-	.optionset {
-		li {
-			input {
-				display:none;
-			}
-			label {
-				cursor: default;
-				position:relative; // needs to be set to position the span element correctly
-				span { // background set using gulp-sprity generated classes (background is green tick icon)
-					display: inline-block;
-					left:$grid-x*-2;
-					margin-bottom: -2px;
-          margin-right: 6px;
-				}
-			}
+.permissioncheckboxsetfield_readonly .optionset li {
+	width: 100%;
+
+	input {
+		display:none;
+	}
+	label {
+		cursor: default;
+		position:relative; // needs to be set to position the span element correctly
+		span { // background set using gulp-sprity generated classes (background is green tick icon)
+			display: inline-block;
+			left:$grid-x*-2;
+			margin-bottom: -2px;
+      margin-right: 6px;
 		}
 	}
 }
